--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             Works with recent iPhone models. Features vary by region and device.
           </p>
           <button class="cta ghost" id="notifyBtn">Notify me</button>
+          <p>Thanks for Visiting.</p>
         </div>
       </section>
     </main>
